# content-gap-crew

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  CREDENTIAL_PATTERNS.md  Dockerfile  README.md  TOOLS.md  pyproject.toml  requirements.txt  source-crewai-script.py
apps/api/app/: __init__.py  config.py  logging_config.py  main.py
apps/api/app/models/: __init__.py  sanity.py
apps/api/app/routers/: __init__.py  agents.py  chat.py  conversations.py  crews.py  health.py  runs.py
apps/api/app/services/: __init__.py  crew_planner.py  crew_runner.py  document_extractor.py  input_validator.py  mcp_client.py  sanity.py
apps/api/app/tools/: __init__.py  base.py  bigquery.py  google_ads.py  gsc.py  openai_tools.py  reddit.py  seo.py  sitemap.py  skills.py  tools_catalog.py  web.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/dashboard/: AgentActivityFeed.tsx  ChatArea.tsx  ChatHistory.tsx  CrewPicker.tsx  DynamicFormField.tsx  MarkdownContent.tsx  index.ts
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/components/ui/: Button.tsx  ErrorDisplay.tsx  Toast.tsx  index.ts
apps/web/src/lib/: api.ts  auth.ts  env.server.ts  env.ts  parseArtifacts.ts
apps/web/src/lib/hooks/: index.ts  useChatHistory.ts  useConversation.ts  useRunHistory.ts  useRunStream.ts  useToast.ts
apps/web/src/types/: index.ts
(+1 files in other folders)
