[project]
name = "content-gap-crew-api"
version = "0.1.0"
description = "FastAPI backend for Content Gap Crew"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "crewai>=0.28.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "google-cloud-bigquery>=3.14.0",
    "google-auth>=2.25.0",
    "google-api-python-client>=2.111.0",
    "google-ads>=23.0.0",
    "praw>=7.7.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
